--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,16 @@ services:
     environment:
       POSTGRES_PASSWORD: example
     ports:
-      - "5432:5432"
+      - "127.0.0.1:5432:5432"
 
   adminer:
     image: adminer
     restart: always
     ports:
       - 8080:8080
+
+  app:
+    build: .
+    restart: always
+    ports:
+      - "9001:9001"
