--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# Use postgres/example user/password credentials
 version: "3.1"
 
 services:
@@ -15,9 +14,13 @@ services:
     restart: always
     ports:
       - 8080:8080
+    depends_on:
+      - db
 
   app:
     build: .
     restart: always
     ports:
       - "9001:9001"
+    depends_on:
+      - db
